fix: met à jour la date de mise à jour et rétablit l'overflow-x sur le corps

--- a/public/reset.css
+++ b/public/reset.css
@@ -1,7 +1,7 @@
 /* ==========================================
  * Reset CSS et print, made par Alsacréations
  * Consignes : à placer dans un layer inférieur aux autres layers
- * Mise à jour : 2026-02-17
+ * Mise à jour : 2026-02-19
  * ========================================== */
 
 /* ----------------------------
@@ -31,8 +31,8 @@ html {
 }
 
 body {
-  overflow-x: clip;
   min-height: 100dvh;
+  overflow-x: clip;
   margin: 0;
   font-family: system-ui, sans-serif;
   line-height: 1.5;
